# DeepFFMPEG

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DeepFFMPEG.cpp  DeepFFMPEG.h  FFmpegLogger.cpp  README.md  main.cpp  vf_simple.cpp
header/: FFmpegLogger.h  FFmpegProcessor.h  ffmpeg_common.h  ffmpeg_context.h  ffmpeg_context.hpp  ffmpeg_filter.h  ffmpeg_io.h  ffmpeg_logger.h  ffmpeg_processor.h  ffmpeg_utils.h
src/: FFmpegProcessor.cpp  ffmpeg_common.cpp  ffmpeg_context.cpp  ffmpeg_filter.cpp  ffmpeg_io.cpp  ffmpeg_logger.cpp  ffmpeg_processor.cpp  fmpeg_logger.cpp  main.cpp  vf_simple.cpp
